basic graph on everview fragment
Co-authored-by: hitosisasaki <hitosisasaki0212@gmail.com>
Co-authored-by: satokihanada <satoki0212@gmail.com>

--- a/app/src/main/res/layout/overview_fragment.xml
+++ b/app/src/main/res/layout/overview_fragment.xml
@@ -5,10 +5,22 @@
     tools:context="info.nightscout.androidaps.plugins.Overview.OverviewFragment">
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/overview_bg"
-        android:layout_gravity="left|top"
-        android:textSize="100dp" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/overview_bg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left|top"
+            android:textSize="100dp" />
+
+        <com.jjoe64.graphview.GraphView
+            android:id="@+id/overview_bggraph"
+            android:layout_width="match_parent"
+            android:layout_height="200dip" />
+    </LinearLayout>
+
 </FrameLayout>
